# imperium-startup-skill

./: .gitignore  README.md  SKILL.md  generate_carousel.py  generate_carousel_v2.py  linkedin-carousel-imperium-brain-v2.pptx  linkedin-carousel-imperium-brain.pptx
.claude-plugin/: marketplace.json  plugin.json
agents/: brand-architect.md  ceo-strategist.md  content-creator.md  cto-architect.md  growth-marketer.md  market-researcher.md  product-analyst.md  sales-hunter.md
assets/checklists/: fundraise-checklist.md  launch-checklist.md  seo-checklist.md
assets/frameworks/: jobs-to-be-done.md  lean-canvas.md  mom-test-cheatsheet.md  value-prop-canvas.md
brand/templates/: consumer-app.md  creative-agency.md  (+3 more)
chroma_db/: chroma.sqlite3
commands/: carousel.md  cold-email.md  competitor-matrix.md  crawl-check.md  create-brand.md  create-slides.md  create-sop.md  create-video.md  deep-research.md  discover-apis.md  eval-loop.md  find-images.md  founder-kb.md  fundraise-prep.md  gtm-plan.md  linkedin-post.md  metrics-dashboard.md  pitch-deck.md  pricing-strategy.md  validate-idea.md
evals/: eval-runner.py  evals.json  metrics.md
hooks/: hooks.json
skills/founder/scripts/founder-kb/: cli.py  pyproject.toml
skills/founder/scripts/founder-kb/data/raw/: founders-guide-unshakeable-mind.txt
skills/founder/scripts/founder-kb/src/: __init__.py  chunker.py  embeddings.py  epub_processor.py  pdf_processor.py  search.py  vector_store.py
templates/: board-deck-outline.md  competitive-matrix.md  gtm-plan.md  investor-update.md  pitch-deck-template.json  prd-template.md
(+123 files in other folders)
