[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "founder-kb"
version = "1.0.0"
description = "AI-powered knowledge base CLI for founders"
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
dependencies = [
    "typer[all]>=0.9.0",
    "chromadb>=0.4.0",
    "sentence-transformers>=2.2.0",
    "langchain>=0.1.0",
    "langchain-text-splitters>=0.0.1",
    "langchain-experimental>=0.0.47",
    "langchain-huggingface>=0.0.3",
    "pypdf>=3.0.0",
    "ebooklib>=0.18",
    "beautifulsoup4>=4.12.0",
    "requests>=2.31.0",
    "scikit-learn>=1.0.0",
]

[tool.setuptools]
py-modules = ["cli"]
packages = ["src"]

[project.scripts]
founder-kb = "cli:app"
